always set labels
Signed-off-by: Alex Meijer <alexander.meijer@ibm.com>

--- a/.github/workflows/integration-testing.yaml
+++ b/.github/workflows/integration-testing.yaml
@@ -56,7 +56,7 @@ jobs:
 
   set-labels:
     needs: run-tests
-    if: ${{ github.event_name == 'pull_request' }}
+    if: ${{ always() && github.event_name == 'pull_request' }}
     runs-on: ubuntu-latest
     steps:
       - name: Label integration tests failing
