--- a/.github/workflows/integration-testing.yaml
+++ b/.github/workflows/integration-testing.yaml
@@ -6,7 +6,8 @@ on:
   push:
     branches:
       - main
-  pull_request_target:
+  #pull_request_target:
+  pull_request:
     branches:
       - main
 
