--- a/.github/workflows/integration-testing.yaml
+++ b/.github/workflows/integration-testing.yaml
@@ -6,8 +6,7 @@ on:
   push:
     branches:
       - main
-  #pull_request_target:
-  pull_request:
+  pull_request_target:
     branches:
       - main
 
