checkout proper ref
Signed-off-by: Alex Meijer <alexander.meijer@ibm.com>

--- a/.github/workflows/integration-testing.yaml
+++ b/.github/workflows/integration-testing.yaml
@@ -27,6 +27,7 @@ jobs:
         with:
             fetch-depth: 0
             submodules: recursive
+            ref: ${{ github.event.pull_request.head.sha || github.ref }}
 
       - name: Set up Go
         uses: actions/setup-go@v4
