--- a/.github/workflows/integration-testing.yaml
+++ b/.github/workflows/integration-testing.yaml
@@ -34,6 +34,14 @@ jobs:
         with:
           go-version: '1.21'
 
+      - name: Compile all packages
+        env:
+          CGO_ENABLED: 0
+        run: go build -v ./...
+      
+      - name: go vet
+        run: go vet ./...
+
       - name: Run integration tests
         id: run-tests
         env:
