--- a/.github/workflows/integration-testing.yaml
+++ b/.github/workflows/integration-testing.yaml
@@ -33,6 +33,9 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '1.21'
+      
+      - name: go vet
+        run: go vet ./...
 
       - name: Run integration tests
         id: run-tests
