--- a/.github/workflows/bugbot.yaml
+++ b/.github/workflows/bugbot.yaml
@@ -17,6 +17,7 @@ jobs:
     steps:
       - name: Comment 'bugbot run' as ameijer
         uses: actions/github-script@v7
+        if: github.event.pull_request.user.login != 'ameijer'
         with:
           github-token: ${{ secrets.BUGBOT_COMMENTER_PAT }}
           script: |
