--- a/.github/workflows/bugbot.yaml
+++ b/.github/workflows/bugbot.yaml
@@ -1,7 +1,7 @@
 name: BugBot Code Review
 
 on:
-  pull_request:
+  pull_request_target:
     types: [opened, synchronize]
     branches:
       - main
